WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294498
Fix crash in WebFrameProxy::didCreateSubframe with site isolation on
https://bugs.webkit.org/show_bug.cgi?id=294498
Summary
Fix crash in WebFrameProxy::didCreateSubframe with site isolation on
Alex Christensen
Reported
2025-06-14 00:36:29 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2025-06-14 00:40:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46755
Radar WebKit Bug Importer
Comment 2
2025-06-14 00:40:37 PDT
<
rdar://problem/153368772
>
EWS
Comment 3
2025-06-14 15:00:00 PDT
Committed
296234@main
(18b25d9d92b9): <
https://commits.webkit.org/296234@main
> Reviewed commits have been landed. Closing PR #46755 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug